--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
       <footer class="site-footer">
         {% if site.github.is_project_page %}
           <!-- <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span> -->
-          <span class="site-footer-owner">Car Tracker разрабатывается ООО "НПО "Дорис Проект" © 2022</span>
+          <span class="site-footer-owner">ООО "НПО "Дорис Проект" © 2022</span>
         {% endif %}
         <span class="site-footer-credits">Эта страница была сгенерирована <a href="https://pages.github.com">GitHub Pages</a>.</span>
       </footer>
