--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <!-- <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a> -->
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Скачать инсталлятор .exe</a>
+        <a href="{{ site.dist_link }}" class="btn">Скачать инсталлятор .exe</a>
         <!-- <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a> -->
       {% endif %}
     </header>
